--- a/style.css
+++ b/style.css
@@ -5,10 +5,11 @@ body{
 .container{
     background-color: white;
     border-radius: 0.3rem;
-    box-shadow: 1px 1px 2px grey;
+    box-shadow: 1px 1px 4px grey;
     font-family: Arial, Helvetica, sans-serif;
     height: auto;
     margin: 0 auto;
+    margin-top: 1rem;
     width: 80%;
 }
 
@@ -32,12 +33,57 @@ header nav a{
 }
 
 header nav a:last-child {
-    color: rgb(209, 49, 124);
+    color: violet;
 }
 
 header nav a:hover{
     color: blue;
 }
+
+main{
+    margin: 0 auto;
+}
+
+.one{
+    display: grid;
+    grid-auto-rows: auto;
+    grid-template-columns: auto;
+    margin: 1rem;
+    text-align: center;
+}
+
+main .one .text h5{
+    color: violet;
+}
+
+main .one .text h1{
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    text-align: left;
+}
+
+main .one .text p{
+        color: grey;
+        padding-bottom: 1rem;
+        text-align: left;
+}
+
+main .one .text button{
+    background-color: white;
+    border-radius: 0.8rem;
+    border-color: red;
+    cursor: pointer;
+    padding: 0.5rem 2rem 0.5rem 2rem;
+}
+
+
+main .one .image img{
+    height: 300px;
+    width: auto;
+}
+
+
+
+
 
 @media only screen and (min-width:768px){
 
@@ -53,4 +99,18 @@ header img{
 header nav a{
     display: inline-block;
     padding-right: 0.5rem;
+}
+
+main{
+    margin: 0 auto;
+    padding: 2rem;
+}
+
+.one{
+    grid-template-columns: 1fr 1fr;
+    text-align: left;
+}
+
+main .one .image img{
+    height: 500px;
 }
