--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body{
     height: auto;
     margin: 0 auto;
     margin-top: 1rem;
-    width: 80%;
+    width: 90%;
 }
 
 header{
@@ -50,6 +50,7 @@ main{
     grid-template-columns: auto;
     margin: 1rem;
     text-align: center;
+
 }
 
 main .one .text h5{
@@ -81,7 +82,14 @@ main .one .image img{
     width: auto;
 }
 
-
+.two{
+    background-image: url("/assets/assets/background.svg");
+    background-repeat: no-repeat;
+    border-radius: 0.3rem;
+    padding: 4rem 2rem 1rem 2rem;
+    margin: 0 1rem 0 1rem;
+    
+}
 
 
 
@@ -114,3 +122,4 @@ main{
 main .one .image img{
     height: 500px;
 }
+
