--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body{
     height: auto;
     margin: 0 auto;
     margin-top: 1rem;
+    margin-bottom: 1rem;
     width: 90%;
 }
 
@@ -50,7 +51,6 @@ main{
     grid-template-columns: auto;
     margin: 1rem;
     text-align: center;
-
 }
 
 main .one .text h5{
@@ -82,7 +82,7 @@ main .one .image img{
     width: auto;
 }
 
-.two{
+ main .two{
     background-image: url("/assets/assets/background.svg");
     background-repeat: no-repeat;
     border-radius: 0.3rem;
@@ -91,11 +91,62 @@ main .one .image img{
     
 }
 
-.three{
-    display: flex;
-    justify-content: space-between;
-    padding: 4rem;
+main .three{
+    padding: 2rem;
+    display: block;
 }
+
+main .three img{
+    padding: 1rem;
+}
+
+main .four{
+    padding: 2rem;
+}
+
+main .four .four-info a{
+    color: black;
+}
+
+main .four .four-table thead, tbody{
+    background-color: rgb(218, 211, 211); 
+}
+
+main .four .four-table img{
+    max-height: 280px;
+    max-width: 280px;
+}
+
+main .four .four-table .gloop{
+    color: orange;
+    text-align: left;
+}
+
+main .four .four-table .top{
+    color: grey;
+    text-align: right;
+}
+
+main .four .four-table .color{
+    color: black;
+    text-align: left;
+}
+
+main .four .four-table .price{
+    color: black;
+    text-align: right;
+}
+
+main .four .four-table .number{
+    color: grey;
+    text-align: left;
+}
+
+main .four .four-table .days{
+    color: grey;
+    text-align: right;
+}
+
 
 
 @media only screen and (min-width:768px){
@@ -119,7 +170,7 @@ main{
     padding: 2rem;
 }
 
-.one{
+main .one{
     grid-template-columns: 1fr 1fr;
     text-align: left;
 }
@@ -128,3 +179,51 @@ main .one .image img{
     height: 500px;
 }
 
+main .three{
+    display: flex;
+    justify-content: space-between;
+    padding: 3rem 0 3rem 0;
+}
+
+main .four-table{
+    display: grid;
+    grid-auto-rows: auto;
+    grid-template-columns: auto;
+    grid-gap: 1rem;
+    grid-template-areas: 
+    "grid1 grid3 grid5 grid7"
+    "grid2 grid4 grid6 grid8"
+    ;
+}
+
+main .four .four-table .grid1{
+    grid-area: grid1;
+}
+
+main .four .four-table .grid2{
+    grid-area: grid2;
+}
+
+main .four .four-table .grid3{
+    grid-area: grid3;
+}
+
+main .four .four-table .grid4{
+    grid-area: grid4;
+}
+
+main .four .four-table .grid5{
+    grid-area: grid5;
+}
+
+main .four .four-table .grid6{
+    grid-area: grid6;
+}
+
+main .four .four-table .grid7{
+    grid-area: grid7;
+}
+
+main .four .four-table .grid8{
+    grid-area: grid8;
+}
