--- a/style.css
+++ b/style.css
@@ -93,6 +93,7 @@ main .one .text h1{
     background-image: url("/assets/assets/background.svg");
     background-size: 100%;
     background-repeat: no-repeat;
+    background-size: cover;
     border-radius: 0.5rem 0.5rem 0.5rem 0.5rem;
     margin: 0 1rem 0 1rem;
 }
@@ -102,10 +103,21 @@ main .two p, main .two h2{
     padding-right: 1rem;
 }
 
+main .two h2{
+    padding-top: 4rem;
+}
+
+main .two p{
+    padding-bottom: 2rem;
+}
+
 main .three{
     padding: 2rem;
-    display: flex;
-    flex-direction: column;
+    display: block;
+    margin-right: auto;
+    margin-left: auto;
+    width: 50%;
+    
 }
 
 main .three img{
@@ -113,16 +125,23 @@ main .three img{
     padding: 1rem;
 }
 
-main .four{
-    size: 100%;
-    height: 100%;
-    width: auto;
-    padding-bottom: 4rem;
-    text-align: center;
-}
-
 main .four .four-info p{
     padding-bottom: 2rem;
+}
+
+main .four .four-info a{
+    color: black;
+}
+
+main .four-table{
+    display: flex;
+    flex-wrap: wrap;
+    padding-bottom: 4rem;
+}
+
+main .pirmas, .antras, .trecias, .ketvirtas{
+    background-color: rgb(219, 216, 216);
+    border-radius: 1rem;
 }
 
 main .four .four-info p, main .four .four-info h2{
@@ -131,26 +150,14 @@ main .four .four-info p, main .four .four-info h2{
     padding-right: 1rem;
 }
 
-main .four .four-info a{
-    color: black;
-}
-
 main .four .four-table table, thead, tbody{
-    background-color: rgb(235, 230, 230);
     border-bottom-left-radius: 0.5rem; 
     border-bottom-right-radius: 0.5rem;
-    margin-left: auto;
-    margin-right: auto;
+    margin: auto;
 }
 
-main .four .four-table table{
-    height: auto;
-    max-width: 300px;
-}
-
-main .four .four-table img{
-    height: auto;
-    max-width: 100%;
+main .four table{
+    width: 150px;
 }
 
 main .four .four-table .gloop{
@@ -188,17 +195,11 @@ main .five{
     border-bottom: 1px solid rgb(223, 220, 220);
 }
 
-
 main .six{
+    display: block;
+    text-align: center;
     padding: 1rem;
-}
-
-main .six .mysix .right{
-    padding-top: 2rem;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-auto-rows: 100px;
-    grid-gap: 1rem;
+    height: 300px;
 }
 
 main .six .mysix .left p, main .six .mysix .left a{
@@ -213,11 +214,6 @@ main .six .mysix .right tr, main .six .mysix .right th, main .six .mysix .right 
     background-color: white;
 }
 
-main .six .mysix .right th{
-    text-align: left;
-    padding-bottom: 1rem;
-}
-
 main .six .mysix .right td a:hover{
     color: blue;
 }
@@ -229,14 +225,26 @@ main .six .mysix .right a{
 
 footer{
     padding: 2rem;
+    padding-bottom: 0;
     color: rgb(187, 184, 184);
+    text-align: center;
 }
 
 footer .pad2{
     visibility: hidden;
 }
 
-@media only screen and (min-width:992px){
+@media only screen and (max-width: 768px){
+    main .six table, thead, tr, th, tbody, td{
+        display: block;
+    }
+
+    main .six thead, th{
+        display: none;
+    }
+}
+
+@media only screen and (min-width:768px){
 
 header{
     text-align: right;
@@ -273,78 +281,34 @@ main .two{
 }
 
 main .three{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+    display: inline-block;
+    width: 100%;
     padding: 3rem 0 3rem 0;
+    display: flex;
+    justify-content: space-between;
     flex-wrap: wrap;
 }
 
-main .four{
-    border-bottom: 1rem;
-}
-
-main .four-table{
-    display: grid;
-    grid-auto-rows: auto;
-    grid-template-columns: auto;
-    grid-template-areas: 
-    "grid1 grid3 grid5 grid7"
-    "grid2 grid4 grid6 grid8"
-    ;
-}
-
-main .four .four-table .grid1{
-    grid-area: grid1;
-}
-
-main .four .four-table .grid2{
-    grid-area: grid2;
-}
-
-main .four .four-table .grid3{
-    grid-area: grid3;
-}
-
-main .four .four-table .grid4{
-    grid-area: grid4;
-}
-
-main .four .four-table .grid5{
-    grid-area: grid5;
-}
-
-main .four .four-table .grid6{
-    grid-area: grid6;
-}
-
-main .four .four-table .grid7{
-    grid-area: grid7;
-}
-
-main .four .four-table .grid8{
-    grid-area: grid8;
-}
-
-main .six .mysix .right{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-auto-rows: 100px;
-    grid-gap: 1rem;
-}
-
-main .six .mysix .right tr, main .six .mysix .right th, main .six .mysix .right td{
-    padding-right: 5rem;
+main .six{
+    height: 100px;
 }
 
 main .six .mysix{
-    margin: 2rem;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid: gap 1rem;
-    grid-auto-rows: minmax(100px, auto);
+    display: flex;
+    justify-content: space-between;
 }
 
+main .six .mysix .left{
+    padding-right: 1rem;
+}
+
+main .six .mysix .right tr, main .six .mysix .right th, main .six .mysix .right td{
+    padding-right: 2rem;
+}
+
+main .six .mysix .right th{
+    padding-bottom: 1rem;
+}
 
 footer{
     display: flex;
@@ -356,3 +320,5 @@ footer{
 footer .pad2{
     visibility: visible;
 }
+}
+
